# fauna_example

./: .gitignore  config.toml.example  create.py  fauna.py  pyproject.toml  requirements.txt
