[tool.poetry]
name = "fauna_example"
version = "0.1.0"
description = ""
authors = ["Maxime Weyl"]

[tool.poetry.dependencies]
python = "^3.9"
faunadb = "^4.2.0"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
